<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/order_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/dishes_adding_text"
        android:textSize="35sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/dish_adding_form"
       android:layout_width="300dp"
       android:layout_height="410dp"
       android:paddingLeft="10dp"
       android:background="@color/light_grey"

       app:layout_constraintBottom_toTopOf="@+id/add_dish_button"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/order_text">


       <TextView
           android:id="@+id/dish_name_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dish_name_text"
           android:textSize="20sp"

           app:layout_constraintBottom_toTopOf="@+id/dish_category_text"
           app:layout_constraintStart_toStartOf="parent"

           app:layout_constraintTop_toTopOf="parent"/>

       <EditText
           android:id="@+id/dish_name_enter"
           android:layout_width="150dp"
           android:layout_height="wrap_content"

           app:layout_constraintBottom_toTopOf="@+id/dish_category_enter"
           app:layout_constraintStart_toEndOf="@+id/dish_name_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>


       <TextView
           android:id="@+id/dish_category_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dish_category_text"
           android:textSize="20sp"

           app:layout_constraintBottom_toTopOf="@+id/dish_composition_text"
           app:layout_constraintStart_toStartOf="parent"

           app:layout_constraintTop_toBottomOf="@+id/dish_name_text"/>

       <Spinner
           android:id="@+id/dish_category_enter"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:entries="@array/categories"

           app:layout_constraintBottom_toTopOf="@+id/dish_composition_enter"
           app:layout_constraintStart_toEndOf="@+id/dish_category_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/dish_name_enter"/>

       <!--<EditText
           android:id="@+id/dish_category_enter"
           android:layout_width="150dp"
           android:layout_height="wrap_content"

           app:layout_constraintBottom_toTopOf="@+id/dish_composition_enter"
           app:layout_constraintStart_toEndOf="@+id/dish_category_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/dish_name_enter"/>-->


       <TextView
           android:id="@+id/dish_composition_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dish_composition_text"
           android:textSize="20sp"

           app:layout_constraintBottom_toTopOf="@+id/dish_price_text"
           app:layout_constraintStart_toStartOf="parent"

           app:layout_constraintTop_toBottomOf="@+id/dish_category_text"/>

       <EditText
           android:id="@+id/dish_composition_enter"
           android:layout_width="150dp"
           android:layout_height="wrap_content"

           app:layout_constraintBottom_toTopOf="@+id/dish_price_enter"
           app:layout_constraintStart_toEndOf="@+id/dish_composition_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/dish_category_enter"/>


       <TextView
           android:id="@+id/dish_price_text"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/dish_price_text"
           android:textSize="20sp"

           app:layout_constraintBottom_toTopOf="@+id/add_picture_button"
           app:layout_constraintStart_toStartOf="parent"

           app:layout_constraintTop_toTopOf="@+id/dish_composition_text"/>

       <EditText
           android:id="@+id/dish_price_enter"
           android:layout_width="150dp"
           android:layout_height="wrap_content"

           app:layout_constraintBottom_toTopOf="@+id/add_picture_button"
           app:layout_constraintStart_toEndOf="@+id/dish_price_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/dish_composition_enter"/>

       <Button
           android:id="@+id/add_picture_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add_picture_text"
           android:backgroundTint="@color/purple_200"

           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toStartOf="@+id/dish_image"
           />

       <ImageView
           android:id="@+id/dish_image"
           android:layout_width="100dp"
           android:layout_height="100dp"

           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toEndOf="@+id/add_picture_button"
           app:layout_constraintEnd_toEndOf="parent"
           />



   </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_dish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dishes_adding_button_text"
        android:backgroundTint="@color/purple_200"

        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_orders"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/orders"


            app:layout_constraintBottom_toTopOf="@id/text_orders_button"
            app:layout_constraintEnd_toStartOf="@id/button_adding_dishes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_orders_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_orders"
            app:layout_constraintStart_toStartOf="@id/button_orders"
            app:layout_constraintTop_toBottomOf="@id/button_orders" />

        <Button
            android:id="@+id/button_adding_dishes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/adding_dishes"

            app:layout_constraintBottom_toTopOf="@id/text_adding_dishes_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_orders"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_adding_dishes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dishes_adding_text"
            android:textColor="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/button_adding_dishes"
            app:layout_constraintStart_toStartOf="@id/button_adding_dishes"
            app:layout_constraintTop_toBottomOf="@id/button_adding_dishes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>